This file documents the revision history for Perl extension Text::Markdown.

1.0.29 2009-10-28T15:19:26
        - Note Test::Differences is needed for tests to run (RT#50918)
        - Change build_requires to test_requires in Makefile.PL where
          appropriate.

1.0.28 2009-10-27T14:28:12
        - Fix MANIFEST.skip to avoid extraneous crap in the distribution.

1.0.27 2009-10-25T19:13:47
        - Change to perl style version numbers (from 3 part versions) to
          avoid depndency confusion with Text::MultiMarkdown

1.0.26 2009-10-04T00:37:00
        - Minor POD changes (typos, wrapping)
        - Added note about and test for output always ending in exactly one newline (dandv)
        - Fix RT#48943 + tests (genehack)
        - Support for optionally interpreting markdown in HTML block elements
          using the markdown="1" attribute (GitHub issue #1; dandv)

1.0.25 2009-08-25T09:31:30
        - Remove MultiMarkdown from the Text::Markdown distribution
        - Change repository and bugtracker metadata to github.
        - Update File::Slurp dependency, fixing RT#43888.

1.0.24 2008-11-16T14:33:30
        - Add trust_list_start_value patch from Ricardo Signes (RT#40814)
          to enable <li value='X'> output for list numbering.
          This feature is disabled by default.

1.0.23 2008-11-02T18:24:30
        - Ship a release with the correct contents so that the tests pass.

1.0.22 2008-10-23T18:24:44
        - RT#37909 - Fix + in email addresses.
        - RT#40303 - Fix use in Mason by adding "use re 'eval'" to both files.
        - Add SVN repository to Makefile.PL
        - Remove META.yml from source control so it is regenerated 
          automatically.

1.0.21 2008-07-24T08:33:00
        - Fix hard tabs in Changelog
        - Add unit test for core dumps issue from RT#36203
        - Fix POD spelling.
        - Fix warning from RT#34856.
        - Add test for another tab width issue (related to <hr> generation)