@@ -1,5 +1,7 @@
 This file documents the revision history for Perl extension Text::Markdown.
 
+        - Removed File::Slurp dependency (v. 9999.13 fails tests on Strawberry 5.10.1) (dandv)
+
 1.0.29 2009-10-28T15:19:26
         - Note Test::Differences is needed for tests to run (RT#50918)
         - Change build_requires to test_requires in Makefile.PL where
